# ai-powered-hotel-operations-orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  PROJECT_INTEGRITY.md  README.md  VALIDATION_REPORT.md  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt
app/: config.py  main.py  schemas.py
app/api/routes/: documents.py  events.py  health.py  rag.py  revenue.py  workflows.py
app/infrastructure/: audit_store.py  event_bus.py  state_store.py
app/ml/: complaint_classifier.py  document_extractor.py  layoutlm_adapter.py  occupancy_forecaster.py  pricing_engine.py
app/rag/: hybrid_retriever.py  weaviate_store.py
app/services/: revenue_service.py
app/static/: dashboard.html
app/workflows/: hotel_ops_graph.py
data/: synthetic_complaints.csv  synthetic_hotel_demand.csv
data/sample_documents/: guest_registration.txt
data/sops/: engineering_water_leak.md  finance_billing.md  food_service.md  frontoffice_noise.md  frontoffice_service_delay.md  housekeeping_cleanliness.md  security_fire_smoke.md
models/: occupancy_xgb.joblib
scripts/: benchmark_workflows.py  evaluate_models.py  explain_forecast.py  generate_synthetic_data.py  index_sops_weaviate.py  train_distilbert.py  train_forecaster.py  train_layoutlmv3.py
tests/: conftest.py  test_api.py  test_classifier.py  test_document_extractor.py  test_rag.py  test_revenue.py  test_workflow.py
