[project]
name = "aditya-hotel-ai-operations-orchestrator"
version = "2.0.0"
description = "AI-powered hotel revenue and operations workflow portfolio reconstruction"
authors = [{name = "Aditya Pundhir"}]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "xgboost>=2.1,<4.0",
  "shap>=0.46,<1.0",
  "joblib>=1.4,<2.0",
]

[project.optional-dependencies]
full = [
  "langgraph>=0.2",
  "transformers>=4.45,<6.0",
  "sentence-transformers>=3.1,<6.0",
  "torch>=2.3",
  "datasets>=3.0,<5.0",
  "pytesseract>=0.3.13",
  "rank-bm25>=0.2.2",
  "weaviate-client>=4.16,<5.0",
  "redis>=5.0,<8.0",
  "kafka-python-ng>=2.2,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
]
dev = ["pytest>=8.0,<10.0", "pytest-asyncio>=0.24,<2.0", "httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
